fixed layout and  alignment in calculator

--- a/css/styles.css
+++ b/css/styles.css
@@ -129,6 +129,10 @@ nav a{
     min-height: 20rem;
 }
 
+#section-calculator>h2{
+    padding: 1rem 0;
+}
+
 .water-well-calculator-container{
     font-size: 1.2rem;
 }
@@ -136,7 +140,7 @@ nav a{
 
 .calculator-row{
     text-align: center;
-    margin: 2rem 0;
+    margin: 1rem 0;
 }
 
 .calculator-row:after{
@@ -147,16 +151,17 @@ nav a{
 
 .calculator-column { 
     text-align: left;
+    padding: 0.2rem;
 }
 
 
-#form-water-calculator input,#form-water-calculator select, #form-water-calculator option {
+#form-water-calculator input, #form-water-calculator select, #form-water-calculator option {
     border: none;
     font-size: 1.2rem;
     border: 3px solid var(--grey);
     text-align: right;
     cursor: pointer; 
-    max-width: 100%;
+    width: 100%;
     border-radius: 0.3rem;
     font-family: 'Maven Pro', sans-serif;
     color: var(--main-2);
@@ -198,6 +203,7 @@ nav a{
     box-shadow: 3px 3px 12px 0px var(--blue);
     text-align: center;
     transition: 0.2s;
+    margin: 1rem 0;
 }
 
 #form-water-calculator button:hover{
